--- a/WindowsFormsDetailsAndProviders/WindowsFormsDetailsAndProviders/App.config
+++ b/WindowsFormsDetailsAndProviders/WindowsFormsDetailsAndProviders/App.config
@@ -6,6 +6,7 @@
         <add name="WindowsFormsDetailsAndProviders.Properties.Settings.ProvidersAndDetails_ConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ProvidersAndDetails_new.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
+        <add name="ConnectionString" providerName="System.Data.SqlClient" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=ProvidersAndDetails;Data Source=localhost" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
